// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should deposit: deposit_success 1`] = `
Object {
  "_accepted": "true",
  "events": Array [
    Object {
      "_eventname": "Deposit",
      "params": Array [],
    },
  ],
  "gas_remaining": "9753",
  "message": null,
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "10",
      "vname": "_balance",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "True",
      },
      "vname": "deposit",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
  ],
}
`;

exports[`should emit error event on transfer fail if not registry: onTransferFailure_success 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Error",
      "params": Array [],
    },
  ],
  "gas_remaining": "9593",
  "message": null,
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "deposit",
    },
  ],
}
`;

exports[`should emit error event on transfer success if not registry: onTransferSuccess_failure 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Error",
      "params": Array [],
    },
  ],
  "gas_remaining": "9593",
  "message": null,
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "deposit",
    },
  ],
}
`;

exports[`should fail to deposit with incorrect price: deposit_failure 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Error",
      "params": Array [],
    },
  ],
  "gas_remaining": "9758",
  "message": null,
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "deposit",
    },
  ],
}
`;

exports[`should payout seller on transfer success: onTransferSuccess_success 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Success",
      "params": Array [],
    },
  ],
  "gas_remaining": "9455",
  "message": Object {
    "_amount": "10",
    "_recipient": "0x1111111111111111111111111111111111111111",
    "_tag": "",
    "params": Array [],
  },
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "True",
      },
      "vname": "sold",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "deposit",
    },
  ],
}
`;

exports[`should refund on transfer fail: onTransferFailure_success 1`] = `
Object {
  "_accepted": "false",
  "events": Array [],
  "gas_remaining": "9495",
  "message": Object {
    "_amount": "10",
    "_recipient": "0x2222222222222222222222222222222222222222",
    "_tag": "",
    "params": Array [],
  },
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "True",
      },
      "vname": "deposit",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
  ],
}
`;

exports[`should swap: swap_success 1`] = `
Object {
  "_accepted": "false",
  "events": Array [],
  "gas_remaining": "9637",
  "message": Object {
    "_amount": "0",
    "_recipient": "0x3333333333333333333333333333333333333333",
    "_tag": "transfer",
    "params": Array [
      Object {
        "type": "ByStr32",
        "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "vname": "node",
      },
      Object {
        "type": "ByStr20",
        "value": "0x2222222222222222222222222222222222222222",
        "vname": "owner",
      },
    ],
  },
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "True",
      },
      "vname": "deposit",
    },
  ],
}
`;
